--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:x.d.du@hotmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/XinDu.CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/XinDu.Resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/Research Statement.pdf">Research Statement</a> &nbsp/&nbsp
                 <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?user=GoYZW7cAAAAJ">Google Scholar</a> &nbsp/&nbsp
