--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research is mainly about local pattern discovery connects explainable subgroups in the datasets to the machine learning models, which we call Exceptional Model Mining (EMM). My study values the importance of data and the functions learned from those data as certain representations. Hence, I`m interested in exploring various search algorithms for pattern discovery and machine learning / probabilistic models for knowledge discovery.
+                My research is mainly about local pattern discovery connects explainable subgroups in the datasets to the machine learning models, which we call Exceptional Model Mining (EMM). My study values the importance of data and the functions learned from those data as certain representations. Hence, I`m interested in exploring various search algorithms for pattern discovery and machine learning / probabilistic models for knowledge discovery. Specifically, my research areas include Exceptional Model Mining, Causal Inference, Trustworthy Machine Learning and Spatio-Temporal Data Mining.
               </p>
             </td>
           </tr>
